force-app/main/default/objects/SurveyResult__c/SurveyResult__c.object-meta.xml
<CustomObject>
    <label>Resultado da Pesquisa</label>
    <nameField>
        <displayFormat>RP-{00000000}</displayFormat>
        <label>Nome de Resultados da Pesquisa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados da Pesquisa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>