force-app/main/default/objects/SurveyResult__c/fields/AttachmentRequiredBln__c.field-meta.xml
<CustomField>
    <fullName>AttachmentRequiredBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessário Anexo</label>
    <type>Checkbox</type>
</CustomField>