force-app/main/default/objects/SurveyResult__c/fields/BrandTxt__c.field-meta.xml
<CustomField>
    <fullName>BrandTxt__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>