force-app/main/default/objects/SurveyResult__c/fields/ChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>ChannelTxt__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>