force-app/main/default/objects/SurveyResult__c/fields/CustomerSurveyLkp__c.field-meta.xml
<CustomField>
    <fullName>CustomerSurveyLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pesquisa de Preço (Cliente)</label>
    <referenceTo>CustomerSurvey__c</referenceTo>
    <relationshipLabel>Resultados da Pesquisa</relationshipLabel>
    <relationshipName>Resultados_da_Pesquisa</relationshipName>
    <type>Lookup</type>
</CustomField>