force-app/main/default/objects/SurveyResult__c/fields/MaterialGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroupTxt__c</fullName>
    <label>Grupo de Material</label>
    <length>50</length>
    <type>Text</type>
</CustomField>