force-app/main/default/objects/SurveyResult__c/fields/MaterialTypeFml__c.field-meta.xml
<CustomField>
    <fullName>MaterialTypeFml__c</fullName>
    <description>Indica se o gruo de material do produto utilizado na pesquisa é tubo ou não.</description>
    <formula>IF( MaterialGroupTxt__c==&apos;Tubos&apos;, &apos;Tubo&apos;, &apos;Não-Tubo&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo do material</label>
    <type>Text</type>
</CustomField>