force-app/main/default/objects/SurveyResult__c/fields/PriceNmb__c.field-meta.xml
<CustomField>
    <fullName>PriceNmb__c</fullName>
    <label>Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>