force-app/main/default/objects/SurveyResult__c/fields/ProductDescriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductDescriptionTxt__c</fullName>
    <label>Descrição do Produto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>