force-app/main/default/objects/SurveyResult__c/fields/SubsystemTxt__c.field-meta.xml
<CustomField>
    <fullName>SubsystemTxt__c</fullName>
    <label>Subsistema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>