force-app/main/default/objects/SurveyResult__c/fields/SurveyProductLkp__c.field-meta.xml
<CustomField>
    <fullName>SurveyProductLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto da Pesquisa</label>
    <referenceTo>SurveyProduct__c</referenceTo>
    <relationshipLabel>Resultados da Pesquisa</relationshipLabel>
    <relationshipName>Resultados_da_Pesquisa</relationshipName>
    <type>Lookup</type>
</CustomField>