force-app/main/default/objects/SurveyResult__c/validationRules/CompleteCustomerSurvey.validationRule-meta.xml
<ValidationRule>
    <fullName>CompleteCustomerSurvey</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CustomerSurveyLkp__r.StatusTxt__c) = &apos;Completa&apos;</errorConditionFormula>
    <errorMessage>Não é possível editar uma pesquisa de preço completa.</errorMessage>
</ValidationRule>