force-app/main/default/objects/SurveyResult__c/validationRules/InvalidPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidPrice</fullName>
    <active>true</active>
    <errorConditionFormula>PriceNmb__c &lt;= 0</errorConditionFormula>
    <errorMessage>Insira um valor maior do que R$0,00 para o preço dos produtos.</errorMessage>
</ValidationRule>